# OpenOrCadParser

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_and_test.sh  format.sh  mingw-w64-x86_64.cmake  repos.yaml  run_parallel_tests.py  run_parallel_tests.sh  run_tests.py  testing.py  vcpkg.json
.github/workflows/: main.yml
cfb_utils/: Cargo.toml  README.md
cli/: CMakeLists.txt
doc/: container_structure.md  file_container.md  file_format_changes.md  implementation.md  orcad_application_history.md  related_projects.md  tests.md
doc/parser/: example_structure.md  parser.md  parser_prefixes.md  parser_primitive.md  parser_string.md  parser_structure.md
lib/: CMakeLists.txt
src/: CfbfStreamLocation.hpp  CommonBase.cpp  CommonBase.hpp  Container.cpp  Container.hpp  ContainerContext.cpp  ContainerContext.hpp  ContainerExtractor.cpp  ContainerExtractor.hpp  DataStream.cpp  DataStream.hpp  DataVariants.hpp  Database.hpp  Exception.hpp  FutureData.hpp  General.hpp  GenericParser.cpp  GenericParser.hpp  GetStreamHelper.hpp  Library.hpp  Misc.cpp  PageSettings.cpp  PageSettings.hpp  Parser.cpp  Parser.hpp  ParserContext.hpp  PinShape.hpp  Record.hpp  RecordFactory.cpp  RecordFactory.hpp  Stream.hpp  StreamContext.hpp  StreamFactory.cpp  StreamFactory.hpp  VisitorPattern.hpp  XmlExporter.cpp  XmlExporter.hpp  main.cpp
src/Enums/: Color.hpp  ComponentType.hpp  DirectoryType.hpp  FillStyle.hpp  GeometryStructure.hpp  HatchStyle.hpp  ImplementationType.hpp  LineStyle.hpp  LineWidth.hpp  PortType.hpp  Primitive.hpp  Rotation.hpp  StreamType.hpp  Structure.hpp
src/Files/: AdminData.cpp  AdminData.hpp  CellsDirectory.cpp  DirectoryStruct.hpp  DsnStream.cpp  DsnStream.hpp  ExportBlocksDirectory.cpp  GraphicsDirectory.cpp  HSObjects.cpp  HSObjects.hpp  Hierarchy.cpp  NetBundleMapData.cpp  NetBundleMapData.hpp  Package.cpp  Package.hpp  PackagesDirectory.cpp  Page.cpp  PartsDirectory.cpp  Schematic.cpp  Symbol.cpp  Symbol.hpp  SymbolsDirectory.cpp  SymbolsLibrary.cpp  SymbolsLibrary.hpp  Type.cpp  ViewsDirectory.cpp
src/Parser/: parseDirectory.cpp  parsePackage.cpp  parseSymbolsLibrary.cpp
src/Primitives/: Point.cpp  Point.hpp  PrimArc.cpp  PrimArc.hpp  PrimBase.hpp  PrimBezier.cpp  PrimBezier.hpp  PrimBitmap.cpp  PrimBitmap.hpp  PrimCommentText.cpp  PrimCommentText.hpp  PrimEllipse.cpp  PrimEllipse.hpp  PrimLine.cpp  PrimLine.hpp  PrimPolygon.cpp  PrimPolygon.hpp  PrimPolyline.cpp  PrimPolyline.hpp  PrimRect.cpp  PrimRect.hpp  PrimSymbolVector.cpp  PrimSymbolVector.hpp
src/Streams/: StreamAdminData.cpp  StreamAdminData.hpp  StreamBOMDataStream.cpp  StreamBOMDataStream.hpp  StreamCache.cpp  StreamCache.hpp  StreamCellsDirectory.cpp  StreamCellsDirectory.hpp  StreamDTypeD.cpp  StreamDTypeD.hpp  StreamDirectoryStruct.cpp  StreamDirectoryStruct.hpp  StreamDsnStream.cpp  StreamDsnStream.hpp  StreamERC.cpp  StreamERC.hpp  StreamExportBlocksDirectory.cpp  StreamExportBlocksDirectory.hpp  StreamGraphicsDirectory.cpp  StreamGraphicsDirectory.hpp  StreamHSObjects.cpp  StreamHSObjects.hpp  StreamHierarchy.cpp  StreamHierarchy.hpp  StreamLibrary.cpp  StreamLibrary.hpp  StreamNetBundleMapData.cpp  StreamNetBundleMapData.hpp  StreamPackage.cpp  StreamPackage.hpp  StreamPackagesDirectory.cpp  StreamPackagesDirectory.hpp  StreamPage.cpp  StreamPage.hpp  StreamPartsDirectory.cpp  StreamPartsDirectory.hpp  StreamSchematic.cpp  StreamSchematic.hpp  StreamSymbol.cpp  StreamSymbol.hpp  (+6 more)
src/Structures/: Arc.cpp  Arc.hpp  Bezier.cpp  Bezier.hpp  Bitmap.cpp  Bitmap.hpp  CommentText.cpp  CommentText.hpp  DirectoryStruct.hpp  Ellipse.cpp  Ellipse.hpp  GeneralProperties.cpp  GeneralProperties.hpp  GeometrySpecification.cpp  GeometrySpecification.hpp  Library.hpp  Line.cpp  Line.hpp  Package.hpp  PartInst.cpp  PinIdxMapping.cpp  PinIdxMapping.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Polyline.cpp  Polyline.hpp  Properties.cpp  Properties.hpp  Properties2.cpp  Properties2.hpp  PropertiesTrailing.cpp  PropertiesTrailing.hpp  Rect.cpp  Rect.hpp  StructAlias.cpp  StructAlias.hpp  StructBookMarkSymbolInst.cpp  StructBookMarkSymbolInst.hpp  (+135 more)
src/Win32/: LOGFONTA.hpp
test/: CMakeLists.txt
test/py/: FileErrorDatabase.py  requirements.txt  testing.py
test/src/: Helper.hpp  catch_main.cpp  test.cpp
test/test_cases/: 0000.OLB  0000.xml  0001.OLB  0001.xml  0002.xml  0003.OLB  0003.xml  0004.OLB  0004.xml  0005.xml  0006.OLB  0007.OLB  0007.xml
unit_test/: CMakeLists.txt  vcpkg.json
unit_test/src/: unit_tests.cpp
unit_test/test_cases/: 0002.OLB  0005.OLB  0006.xml  README.md
