# Add CompoundFileReader dependency
find_path(COMPOUNDFILEREADER_INCLUDE_DIRS "compoundfilereader.h")

# Add tinyxml2 dependency
find_package(tinyxml2 CONFIG REQUIRED)

set(SOURCES
   ${LIB_SRC_DIR}/CommonBase.cpp
   ${LIB_SRC_DIR}/ContainerExtractor.cpp
   ${LIB_SRC_DIR}/DataStream.cpp
   # ${LIB_SRC_DIR}/Misc.cpp
   ${LIB_SRC_DIR}/PageSettings.cpp
   ${LIB_SRC_DIR}/Parser.cpp
   ${LIB_SRC_DIR}/Primitives/Point.cpp
   ${LIB_SRC_DIR}/Primitives/PrimArc.cpp
   ${LIB_SRC_DIR}/Primitives/PrimBezier.cpp
   ${LIB_SRC_DIR}/Primitives/PrimBitmap.cpp
   ${LIB_SRC_DIR}/Primitives/PrimCommentText.cpp
   ${LIB_SRC_DIR}/Primitives/PrimEllipse.cpp
   ${LIB_SRC_DIR}/Primitives/PrimLine.cpp
   ${LIB_SRC_DIR}/Primitives/PrimPolygon.cpp
   ${LIB_SRC_DIR}/Primitives/PrimPolyline.cpp
   ${LIB_SRC_DIR}/Primitives/PrimRect.cpp
   ${LIB_SRC_DIR}/Primitives/PrimSymbolVector.cpp
   ${LIB_SRC_DIR}/Streams/StreamAdminData.cpp
   ${LIB_SRC_DIR}/Streams/StreamCellsDirectory.cpp
   ${LIB_SRC_DIR}/Streams/StreamCellsDirectory.hpp
   ${LIB_SRC_DIR}/Streams/StreamDsnStream.cpp
   ${LIB_SRC_DIR}/Streams/StreamERC.cpp
   ${LIB_SRC_DIR}/Streams/StreamExportBlocksDirectory.cpp
   ${LIB_SRC_DIR}/Streams/StreamExportBlocksDirectory.hpp
   ${LIB_SRC_DIR}/Streams/StreamGraphicsDirectory.cpp
   ${LIB_SRC_DIR}/Streams/StreamHierarchy.cpp
   ${LIB_SRC_DIR}/Streams/StreamHSObjects.cpp
   ${LIB_SRC_DIR}/Streams/StreamLibrary.cpp
   ${LIB_SRC_DIR}/Streams/StreamNetBundleMapData.cpp
   ${LIB_SRC_DIR}/Streams/StreamPackage.cpp
   ${LIB_SRC_DIR}/Streams/StreamPackagesDirectory.cpp
   ${LIB_SRC_DIR}/Streams/StreamPage.cpp
   ${LIB_SRC_DIR}/Streams/StreamPartsDirectory.cpp
   ${LIB_SRC_DIR}/Streams/StreamSchematic.cpp
   ${LIB_SRC_DIR}/Streams/StreamSymbol.cpp
   ${LIB_SRC_DIR}/Streams/StreamSymbolsDirectory.cpp
   ${LIB_SRC_DIR}/Streams/StreamType.cpp
   ${LIB_SRC_DIR}/Streams/StreamViewsDirectory.cpp
   ${LIB_SRC_DIR}/Structures/StructAlias.cpp
   ${LIB_SRC_DIR}/Structures/StructBookMarkSymbolInst.cpp
   ${LIB_SRC_DIR}/Structures/StructBusEntry.cpp
   ${LIB_SRC_DIR}/Structures/StructERCSymbol.cpp
   ${LIB_SRC_DIR}/Structures/StructERCSymbolInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGeneralProperties.cpp
   ${LIB_SRC_DIR}/Structures/StructGlobal.cpp
   ${LIB_SRC_DIR}/Structures/StructGlobalSymbol.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicArcInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicBezierInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicBitMapInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicBoxInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicCommentTextInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicEllipseInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicLineInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicOleEmbedInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicPolygonInst.cpp
   ${LIB_SRC_DIR}/Structures/StructGraphicPolylineInst.cpp
   ${LIB_SRC_DIR}/Structures/StructHierarchicSymbol.cpp
   ${LIB_SRC_DIR}/Structures/StructOffPageConnector.cpp
   ${LIB_SRC_DIR}/Structures/StructOffPageSymbol.cpp
   ${LIB_SRC_DIR}/Structures/StructPartInst.cpp
   ${LIB_SRC_DIR}/Structures/StructPinIdxMapping.cpp
   ${LIB_SRC_DIR}/Structures/StructPinShapeSymbol.cpp
   ${LIB_SRC_DIR}/Structures/StructPort.cpp
   ${LIB_SRC_DIR}/Structures/StructPrimitives.cpp
   ${LIB_SRC_DIR}/Structures/StructProperties.cpp
   ${LIB_SRC_DIR}/Structures/StructSthInHierarchy1.cpp
   ${LIB_SRC_DIR}/Structures/StructSthInHierarchy2.cpp
   ${LIB_SRC_DIR}/Structures/StructSthInPages0.cpp
   ${LIB_SRC_DIR}/Structures/StructSymbol.cpp
   ${LIB_SRC_DIR}/Structures/StructSymbolBBox.cpp
   ${LIB_SRC_DIR}/Structures/StructSymbolDisplayProp.cpp
   ${LIB_SRC_DIR}/Structures/StructSymbolPin.cpp
   ${LIB_SRC_DIR}/Structures/StructSymbolPinBus.cpp
   ${LIB_SRC_DIR}/Structures/StructSymbolPinScalar.cpp
   ${LIB_SRC_DIR}/Structures/StructT0x10.cpp
   ${LIB_SRC_DIR}/Structures/StructT0x1f.cpp
   ${LIB_SRC_DIR}/Structures/StructT0x34.cpp
   ${LIB_SRC_DIR}/Structures/StructT0x35.cpp
   ${LIB_SRC_DIR}/Structures/StructTitleBlock.cpp
   ${LIB_SRC_DIR}/Structures/StructTitleBlockSymbol.cpp
   ${LIB_SRC_DIR}/Structures/StructWire.cpp
   ${LIB_SRC_DIR}/Structures/StructWireBus.cpp
   ${LIB_SRC_DIR}/Structures/StructWireScalar.cpp
   ${LIB_SRC_DIR}/XmlExporter.cpp
)

set(HEADERS
   ${LIB_INCLUDE_DIR}/ContainerExtractor.hpp
   ${LIB_INCLUDE_DIR}/DataStream.hpp
   ${LIB_INCLUDE_DIR}/Enums/Color.hpp
   ${LIB_INCLUDE_DIR}/Enums/FillStyle.hpp
   ${LIB_INCLUDE_DIR}/Enums/HatchStyle.hpp
   ${LIB_INCLUDE_DIR}/Enums/ImplementationType.hpp
   ${LIB_INCLUDE_DIR}/Enums/LineStyle.hpp
   ${LIB_INCLUDE_DIR}/Enums/LineWidth.hpp
   ${LIB_INCLUDE_DIR}/Enums/PortType.hpp
   ${LIB_INCLUDE_DIR}/Enums/Primitive.hpp
   ${LIB_INCLUDE_DIR}/Enums/Structure.hpp
   ${LIB_INCLUDE_DIR}/FutureData.hpp
   ${LIB_INCLUDE_DIR}/General.hpp
   ${LIB_INCLUDE_DIR}/PageSettings.hpp
   ${LIB_INCLUDE_DIR}/Parser.hpp
   ${LIB_INCLUDE_DIR}/ParserContext.hpp
   ${LIB_INCLUDE_DIR}/Primitives/Point.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimArc.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimBezier.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimBitmap.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimCommentText.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimEllipse.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimLine.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimPolygon.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimPolyline.hpp
   ${LIB_INCLUDE_DIR}/Primitives/PrimRect.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamAdminData.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamDirectoryStruct.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamDsnStream.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamERC.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamGraphicsDirectory.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamHierarchy.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamHSObjects.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamLibrary.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamNetBundleMapData.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamPackage.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamPackagesDirectory.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamPage.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamPartsDirectory.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamSchematic.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamSymbol.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamSymbolsDirectory.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamType.hpp
   ${LIB_INCLUDE_DIR}/Streams/StreamViewsDirectory.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructAlias.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructBookMarkSymbolInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructBusEntry.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructERCSymbol.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructERCSymbolInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGeneralProperties.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGlobal.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGlobalSymbol.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicArcInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicBezierInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicBitMapInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicBoxInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicCommentTextInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicEllipseInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicLineInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicOleEmbedInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicPolygonInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructGraphicPolylineInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructHierarchicSymbol.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructOffPageConnector.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructOffPageSymbol.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructPartInst.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructPinIdxMapping.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructPinShapeSymbol.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructPort.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructPrimitives.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructProperties.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructSthInHierarchy1.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructSthInHierarchy2.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructSthInPages0.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructSymbol.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructSymbolPin.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructSymbolPinBus.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructSymbolPinScalar.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructT0x10.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructT0x1f.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructT0x34.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructT0x35.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructTitleBlock.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructTitleBlockSymbol.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructWire.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructWireBus.hpp
   ${LIB_INCLUDE_DIR}/Structures/StructWireScalar.hpp
   ${LIB_INCLUDE_DIR}/VisitorPattern.hpp
   ${LIB_INCLUDE_DIR}/Win32/LOGFONTA.hpp
   ${LIB_INCLUDE_DIR}/XmlExporter.hpp
)

# Create library file from sources
add_library(${NAME_LIB} SHARED ${SOURCES} ${HEADERS})

target_include_directories(${NAME_LIB} PRIVATE
                           ${COMPOUNDFILEREADER_INCLUDE_DIRS}
                           ${LIB_INCLUDE_DIR}
)

target_link_libraries(${NAME_LIB} PRIVATE
                      fmt::fmt
                      magic_enum::magic_enum
                      nameof::nameof
                      spdlog::spdlog
                      spdlog::spdlog_header_only
                      tinyxml2::tinyxml2
)
